--- a/css/styles.css
+++ b/css/styles.css
@@ -60,14 +60,14 @@ a {
     text-decoration: none;
 }
 .logo-web {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
     color: var(--hover-text-color);
 }
 .logo-studio {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
@@ -86,7 +86,7 @@ a {
     color: var(--white-text-color)
 }
 .hero button {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -135,7 +135,7 @@ a {
     background-color: #2F303A;
 }
 .logo-studio-white {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
@@ -162,7 +162,7 @@ a {
 /* portfolio */
 button[type="button"] {
     border: none;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
@@ -175,7 +175,7 @@ button[type="button"] {
     background-color: var(--hover-text-color);
 }
 .portfolio h2 {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -183,7 +183,7 @@ button[type="button"] {
     color: var(--primary-text-color);
 }
 .portfolio p {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.8;
     color: var(--title-text-color);
